--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -78,6 +78,14 @@ layout: default
     .blog {
         border-left: 1px solid #cccccc;
     }
+
+    .post-list > li
+    {
+        margin-bottom: 15px;
+    }
+    p{
+        margin-bottom: 4px;
+    }
 </style>
 
 <div class="home">
@@ -99,68 +107,62 @@ layout: default
 
         <div class="interesting-stuff">
 
+            <!--Fetching all posts-->
+            {% assign posts = site.posts %}
+
             <div class="portfolio content">
                 <h3> University Portfolio </h3>
+
+                <div class="jekyll-auto-populate">
+                    {%- if posts.size > 0 -%}
+                        <ul class="post-list">
+                            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                            {%- for post in posts limit:3 -%}
+                                {%- if post.categories contains "jekyll" -%}
+                                    <li>
+                                        <span class="post-meta">{{ post.date | date: date_format }}</span>
+                                        <h3>
+                                            <a class="post-link" href="{{ post.url | relative_url }}">
+                                                {{ post.title | escape }}
+                                            </a>
+                                        </h3>
+                                    </li>
+                                {%- endif -%}
+
+                            {%- endfor -%}
+                        </ul>
+
+                    {%- endif -%}
+                </div>
+
             </div>
 
             <div class="blog content">
                 <h3> Recent Blog Posts</h3>
 
                 <div class="jekyll-auto-populate">
-                    {% if site.paginate %}
-                        {% assign posts = paginator.posts %}
-                    {% else %}
-                        {% assign posts = site.posts %}
-                    {% endif %}
-                    
                     {%- if posts.size > 0 -%}
-                        {%- if page.list_title -%}
-                            <h2 class="post-list-heading">{{ page.list_title }}</h2>
-                        {%- endif -%}
-                        
                         <ul class="post-list">
                             {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
                             {%- for post in posts -%}
-                                <li>
-                                    <span class="post-meta">{{ post.date | date: date_format }}</span>
-                                    <h3>
-                                        <a class="post-link" href="{{ post.url | relative_url }}">
-                                            {{ post.title | escape }}
-                                        </a>
-                                    </h3>
-                                    {%- if site.show_excerpts -%}
-                                    {{ post.excerpt }}
-                                    {%- endif -%}
-                                </li>
+                                {%- if post.categories contains "update" -%}
+                                    <li>
+                                        <span class="post-meta">{{ post.date | date: date_format }}</span>
+                                        <h3>
+                                            <a class="post-link" href="{{ post.url | relative_url }}">
+                                                {{ post.title | escape }}
+                                            </a>
+                                        </h3>
+                                        {%- if site.show_excerpts -%}
+                                        {{ post.excerpt }}
+                                        {%- endif -%}
+                                    </li>
+                                {%- endif -%}
+
                             {%- endfor -%}
                         </ul>
 
-                        {% if site.paginate %}
-                        <div class="pager">
-                            <ul class="pagination">
-                                {%- if paginator.previous_page %}
-                                <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{
-                                        paginator.previous_page }}</a></li>
-                                {%- else %}
-                                <li>
-                                    <div class="pager-edge">•</div>
-                                </li>
-                                {%- endif %}
-                                <li>
-                                    <div class="current-page">{{ paginator.page }}</div>
-                                </li>
-                                {%- if paginator.next_page %}
-                                <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{
-                                        paginator.next_page }}</a></li>
-                                {%- else %}
-                                <li>
-                                    <div class="pager-edge">•</div>
-                                </li>
-                                {%- endif %}
-                            </ul>
-                        </div>
-                        {%- endif %}
-
+                        <a href="">More posts</a>
                     {%- endif -%}
                 </div>
 
