--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
 
 <style>
     .page-content {
