--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: default
 
         display: block;
 
-        background-image: url("assets/screenshots/cropped-rendering-screenshot.png");
+        background-image: url("assets/screenshots/MoreBlobs2.gif");
         background-repeat: no-repeat;
         background-size: cover;
         filter: blur(10px) brightness(0.3);
@@ -165,6 +165,7 @@ layout: default
                 </div>
             </div>
 
+            <!--
             <div class="bio_words" >
                 <h3> Biography </h3>
                 <p> Currently working as a Senior Mixed Reality Developer at VISR Dynamics </p>
@@ -174,6 +175,7 @@ layout: default
                 <p> First class honours BSc in Computer Science with Games Development</p>
                 <small>University of Hull - 2014 to 2017</small>
             </div>
+            -->
         </div>
     </div>
 </div>
