--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: default
         background-image: url("assets/screenshots/MoreBlobs2.gif");
         background-repeat: no-repeat;
         background-size: cover;
-        filter: blur(10px) brightness(0.3);
+        filter: blur(20px) brightness(0.5);
         width: 100%;
         height: 100%;
     }
@@ -85,7 +85,7 @@ layout: default
     }
 
     .outer_container{
-        height: 500px;
+        height: 100%;
         display:flex;
         flex-direction: row;
     }
@@ -149,6 +149,7 @@ layout: default
 
     .home{
         text-shadow: 1px 1px black;
+        height: 80vh;
     }
 
 </style>
@@ -158,7 +159,7 @@ layout: default
         <div class="bio_container">
             <div class="socials_card"  >
                 <div class="socials_container">
-                    <h2>Kristian Dixon</h3>
+                    <h1>Kristian Dixon</h1>
                     <h4>Software Engineer</h4>
 
                     {%- include social.html -%}
@@ -181,7 +182,7 @@ layout: default
 </div>
 
 
-
+{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}{%- include social.html -%}
 <!--
     Fetching all posts
      <div class="interesting-stuff d-none">
