Added a bit of an about section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -159,18 +159,29 @@ layout: default
     .home{
         text-shadow: 1px 1px black;
         height: 80vh;
+        min-height: auto;
     }
 
     .about{
         background-color: #181818;
         width: 100%;
+        padding: 30px;
 
-        height: 400px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-content: center;
     }
 
     .linebreak{
         border-top: 1px solid #404040;
         border-bottom: 1px solid #404040;
+    }
+
+    .aboutwrapper{
+        width: 80%;
+        padding:30px;
+        margin: auto;
     }
 </style>
 
@@ -202,6 +213,14 @@ layout: default
 </div>
 
 <div class="about linebreak">
+    <h2 style="text-align: center">About</h2>
+    <div class="linebreak"></div>
+    <div class="aboutwrapper">
+        <p>Hi I’m Kris, I make lots of technical stuff both as a hobby and professionally and I wanted somewhere that I could share the things I’ve worked on.</p> 
+        <p>I’ve made this website partly as something for myself so that I can look back on what I’ve done at the end of the year and feel proud of what I’ve achieved. My other goal is for something I’ve written to be helpful or inspire someone else. I’ll try to link sources and inspirations where I can and whilst this website doesn’t have a comments system I will try to respond to any social media messages asap.</p>
+    
+        <p>Below is a sort of HTML collage of the things I'm interested in so you know what you can expect to find in the blog posts.</p>
+    </div>
 
 </div>
 
