--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -185,6 +185,24 @@ layout: default
         margin: auto;
         min-width: 100%;
     }
+
+    .leftverticalbreak{
+        border-left: 1px solid #404040;
+    }
+
+    .interestcollageparent{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .rightverticalbreak{
+        border-right: 1px solid #404040;
+    }
+
+    .interestcollageentry{
+        padding: 16px;
+        width:100%;
+    }
 </style>
 
 <div class="home">
@@ -227,6 +245,44 @@ layout: default
     </div>
     <div class="linebreak"></div>
 
+    <div class="interestcollageparent rightverticalbreak leftverticalbreak">
+        <div class="interestcollageentry rightverticalbreak leftverticalbreak">
+            <h5>Languages</h5>
+            <div class="linebreak"></div>
+            <div style="padding-top:16px">
+                <p>C++, C#, HLSL, GLSL, TypeScript, JavaScript, Python, Prolog</p>
+
+                <p>I'm also interested in looking into Rust when I get the spare time.</p>
+            </div>
+        </div>
+        
+        <div class="interestcollageentry rightverticalbreak leftverticalbreak">
+            <h5>Tools and Technologies</h5>
+            <div class="linebreak"></div>
+
+            <div style="padding-top:16px">
+                <p>DirectX Raytracing, DirectX 12, DirectX 11, Vulkan, OpenGL, OpenCV, Open3D, OpenFrameworks, OpenXR, WebRTC, Babylon.js, Point Cloud Library, Shadertoy</p>
+                <p><b>Engines:</b> Unity, Unreal 4</p>
+                <p><b>Source Control:</b> Git, SVN</p>
+            </div>
+        </div>
+
+        <div class="interestcollageentry rightverticalbreak leftverticalbreak">
+            <h5>Areas of Interest</h5>
+            <div class="linebreak"></div>
+
+            <div style="padding-top:16px">
+                <p>Graphics Programming.</p>
+                <p>Generative Art.</p>
+                <p>Computer Vision.</p>
+                <p>Game Development.</p>
+                <p>Mixed Reality.</p>
+                <p>Networked game logic.</p>
+            </div>
+        </div>
+
+    </div>
+    <div class="linebreak"></div>
 </div>
 
 <!--
