Added media query for phone res

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -193,6 +193,14 @@ layout: default
     .interestcollageparent{
         display: flex;
         flex-direction: row;
+
+       
+    }
+
+    @media (max-width: 700px)  {
+        .interestcollageparent{
+            flex-direction:column;
+        }
     }
 
     .rightverticalbreak{
