Less shit on mobile

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -215,6 +215,14 @@ layout: default
         .interestcollageparent{
             flex-direction:column;
         }
+
+        .aboutwrapper{
+            width: 100%;
+            padding: 0;
+            padding-top:30px;
+            padding-bottom:30px;
+        }
+
     }
 
     .rightverticalbreak{
