--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,16 +65,6 @@ layout: default
 
     body {
         font-family: Lato;
-        color: #dddddd;
-    }
-
-    .interesting-stuff {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: flex-start;
-        width: 100%;
-        padding-top: 28px;
     }
 
     .content {
@@ -82,16 +72,32 @@ layout: default
     }
 
     .blog {
-        border-left: 1px solid #cccccc;
+        display: flex;
+        flex-direction: row;
+        padding:30px;
+    }
+
+    .latestposts{
+        flex-grow: 1;
+    }
+
+    .postexcerpt{
+        flex-grow: 3;
     }
 
     .post-list > li
     {
-        margin-bottom: 15px;
+        margin-bottom: 0px;
+        padding:10px;
+        background-color: #50505010;
     }
-    p{
-        margin-bottom: 4px;
+
+    .post-list > li:nth-child(odd)
+    {
+        background-color: #36363610;
+
     }
+    
 
     .outer_container{
         height: 100%;
@@ -233,6 +239,16 @@ layout: default
         padding: 16px;
         width:100%;
     }
+
+    .post-meta-date{
+        flex-grow: 1;
+        text-align: right;
+    }
+
+    .post-meta-tags{
+        flex-grow: 1;
+        text-align: left;
+    }
 </style>
 
 <div class="home">
@@ -312,45 +328,147 @@ layout: default
     </div>
 </div>
 
+{% assign posts = site.posts %}
+{%- if posts.size > 0 -%}
 <div class="blogwrapper linebreak">
     <h2 style="text-align: center">Blog</h2>
     <div class="linebreak"></div>
     
-    <div class="interesting-stuff">
-        <div class="blog content">
-            <h4> Recent Blog Posts</h4>
+    <div class="blog">
+        <div class="latestposts rightverticalbreak">
 
-            <div class="jekyll-auto-populate">
-                {% assign posts = site.posts %}
-                {%- if posts.size > 0 -%}
+                <h2>Recent Posts</h2>
+
                     <ul class="post-list">
                         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
                         {%- for post in posts -%}
                             {%- if post.categories contains "update" -%}
                                 <li>
-                                    <span class="post-meta">{{ post.date | date: date_format }}</span>
-                                    <h3>
-                                        <a class="post-link" href="{{ post.url | relative_url }}">
+                                    <h4 style="margin: 0px;">
+                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
                                             {{ post.title | escape }}
                                         </a>
-                                    </h3>
+                                        <div style="display: flex; flex-direction:row; margin:auto;">
+                                            <span class="post-meta post-meta-tags">Tags: 
+                                                
+                                                {% for tag in post.tags %}
+                                                {{ tag }} 
+                                                
+                                                {% endfor %}
+                                                
+                                            </span>
+                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
+                                        </div>
+                                    </h4>
                                     {%- if site.show_excerpts -%}
-                                    {{ post.excerpt }}
+                                        {{ post.excerpt }}
                                     {%- endif -%}
                                 </li>
+                                <li>
+                                    <h4 style="margin: 0px;">
+                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
+                                            {{ post.title | escape }}
+                                        </a>
+                                        <div style="display: flex; flex-direction:row; margin:auto;">
+                                            <span class="post-meta post-meta-tags">Tags: 
+                                                
+                                                {% for tag in post.tags %}
+                                                {{ tag }} 
+                                                
+                                                {% endfor %}
+                                                
+                                            </span>
+                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
+                                        </div>
+                                    </h4>
+                                    {%- if site.show_excerpts -%}
+                                        {{ post.excerpt }}
+                                    {%- endif -%}
+                                </li>
+                                <li>
+                                    <h4 style="margin: 0px;">
+                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
+                                            {{ post.title | escape }}
+                                        </a>
+                                        <div style="display: flex; flex-direction:row; margin:auto;">
+                                            <span class="post-meta post-meta-tags">Tags: 
+                                                
+                                                {% for tag in post.tags %}
+                                                {{ tag }} 
+                                                
+                                                {% endfor %}
+                                                
+                                            </span>
+                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
+                                        </div>
+                                    </h4>
+                                    {%- if site.show_excerpts -%}
+                                        {{ post.excerpt }}
+                                    {%- endif -%}
+                                </li>
+                                <li>
+                                    <h4 style="margin: 0px;">
+                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
+                                            {{ post.title | escape }}
+                                        </a>
+                                        <div style="display: flex; flex-direction:row; margin:auto;">
+                                            <span class="post-meta post-meta-tags">Tags: 
+                                                
+                                                {% for tag in post.tags %}
+                                                {{ tag }} 
+                                                
+                                                {% endfor %}
+                                                
+                                            </span>
+                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
+                                        </div>
+                                    </h4>
+                                    {%- if site.show_excerpts -%}
+                                        {{ post.excerpt }}
+                                    {%- endif -%}
+                                </li>
+                                <li>
+                                    <h4 style="margin: 0px;">
+                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
+                                            {{ post.title | escape }}
+                                        </a>
+                                        <div style="display: flex; flex-direction:row; margin:auto;">
+                                            <span class="post-meta post-meta-tags">Tags: 
+                                                
+                                                {% for tag in post.tags %}
+                                                {{ tag }} 
+                                                
+                                                {% endfor %}
+                                                
+                                            </span>
+                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
+                                        </div>
+                                    </h4>
+                                    {%- if site.show_excerpts -%}
+                                        {{ post.excerpt }}
+                                    {%- endif -%}
+                                </li>
+
+                                
+
+                                
                             {%- endif -%}
 
                         {%- endfor -%}
                     </ul>
 
                     <a href="">More posts</a>
-                {%- endif -%}
-            </div>
-
+        </div>
+            
+        <div class="postexcerpt leftverticalbreak">
+            
+            {% assign p = site.posts[0] %}
+            {{ p.content | strip_html | truncatewords:75}}
         </div>
     </div>
-   
+        
     <div class="linebreak"></div>
+{%- endif -%}
 </div>
 <!--
     Fetching all posts
