--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,260 +1,8 @@
 ---
 layout: default
 ---
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato" />
+{%- include css.html -%}
 
-<style>
-    .page-content {
-        overflow: auto;
-        position: relative;
-        padding: unset;
-    }
-
-    .page-content::before {
-        content: "";
-        position: fixed;
-        left: 0;
-        right: 0;
-        bottom: 100px;
-        z-index: -1;
-
-        display: block;
-
-        background-image: url("assets/screenshots/MoreBlobs2.gif");
-        background-repeat: no-repeat;
-        background-size: cover;
-        filter: blur(20px) brightness(0.5);
-        width: 100%;
-        height: 100%;
-    }
-
-    .wrapper
-    {
-        max-width: none;
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .site-header {
-        background-color: #181818;
-        position: fixed;
-        width: 100%;
-        z-index: 100;
-        padding-left: 30px;
-        padding-right: 30px;
-        border-top: unset;
-    }
-
-    .site-footer {
-        background-color: #181818;
-    }
-
-    .main-box {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .title-text {
-        font-weight: 700;
-        font-size: 4rem;
-        text-align: center;
-    }
-
-    body {
-        font-family: Lato;
-    }
-
-    .content {
-        width: 100%;
-    }
-
-    .blog {
-        display: flex;
-        flex-direction: row;
-        padding:30px;
-    }
-
-    .latestposts{
-        width:100%;
-        flex-grow: 1;
-    }
-
-    .previewwrapper{
-        padding: 5%;
-    }
-
-    .postexcerpt{
-        flex-grow: 3;
-    }
-
-    .post-list > li
-    {
-        margin-bottom: 0px;
-        padding:10px;
-        background-color: #50505010;
-    }
-
-    .post-list > li:nth-child(odd)
-    {
-        background-color: #36363610;
-
-    }
-    
-
-    .outer_container{
-        height: 100%;
-        display:flex;
-        flex-direction: row;
-    }
-
-    .bio_container{
-        display:flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        width: 100%;
-    }
-
-    .socials_card{
-        flex-grow: 2;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .bio_words{
-        flex-grow: 5;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .socials_container{
-        width: 80%;
-        height: 85%; 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .social-icon{
-        width: 40px;
-        height: 40px;
-        margin:4px;
-    }
-
-    .icon-scale{
-        transform:scale(2);
-    }
-
-    .social_list_item
-    {
-        display: inline;
-        margin: 0;
-    }
-
-    .social-media-list2
-    {
-        margin:0;
-    }
-
-    .grey{
-        color:#dddddd;
-        filter:drop-shadow(0.5px, 0.5px, 1px, black)
-
-    }
-
-    .home{
-        text-shadow: 1px 1px black;
-        height: 80vh;
-        min-height: auto;
-    }
-
-    .about{
-        background-color: #181818F0;
-        width: 100%;
-        padding: 30px;
-
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-content: center;
-        text-align: center;
-        font-size: 20px;
-    }
-
-    .blogwrapper{
-        background-color: #151515;
-        width: 100%;
-        padding: 30px;
-
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-content: center;
-        text-align: center;
-    }
-
-    .linebreak{
-        border-top: 1px solid #404040;
-        border-bottom: 1px solid #404040;
-    }
-
-    .aboutwrapper{
-        width: 80%;
-        padding:30px;
-        margin: auto;
-        max-width: 1200px;
-        
-    }
-
-    .leftverticalbreak{
-        border-left: 1px solid #404040;
-    }
-
-    .interestcollageparent{
-        display: flex;
-        flex-direction: row;
-        max-width: 1200px;;
-        margin:auto;
-    }
-
-    @media (max-width: 800px)  {
-        .interestcollageparent{
-            flex-direction:column;
-        }
-
-        .aboutwrapper{
-            width: 100%;
-            padding: 0;
-            padding-top:30px;
-            padding-bottom:30px;
-        }
-
-    }
-
-    .rightverticalbreak{
-        border-right: 1px solid #404040;
-    }
-
-    .interestcollageentry{
-        padding: 16px;
-        width:100%;
-    }
-
-    .post-meta-date{
-        flex-grow: 1;
-        text-align: right;
-    }
-
-    .post-meta-tags{
-        flex-grow: 1;
-        text-align: left;
-    }
-</style>
 
 <div class="home">
     <div class="outer_container">
@@ -316,7 +64,6 @@ layout: default
                     <ul class="post-list">
                         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
                         {%- for post in posts -%}
-                            {%- if post.categories contains "update" -%}
                                 <li>
                                     <h4 style="margin: 0px;">
                                         <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
@@ -338,95 +85,8 @@ layout: default
                                         {{ post.excerpt }}
                                     {%- endif -%}
                                 </li>
-                                <li>
-                                    <h4 style="margin: 0px;">
-                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
-                                            {{ post.title | escape }}
-                                        </a>
-                                        <div style="display: flex; flex-direction:row; margin:auto;">
-                                            <span class="post-meta post-meta-tags">Tags: 
-                                                
-                                                {% for tag in post.tags %}
-                                                {{ tag }} 
-                                                
-                                                {% endfor %}
-                                                
-                                            </span>
-                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
-                                        </div>
-                                    </h4>
-                                    {%- if site.show_excerpts -%}
-                                        {{ post.excerpt }}
-                                    {%- endif -%}
-                                </li>
-                                <li>
-                                    <h4 style="margin: 0px;">
-                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
-                                            {{ post.title | escape }}
-                                        </a>
-                                        <div style="display: flex; flex-direction:row; margin:auto;">
-                                            <span class="post-meta post-meta-tags">Tags: 
-                                                
-                                                {% for tag in post.tags %}
-                                                {{ tag }} 
-                                                
-                                                {% endfor %}
-                                                
-                                            </span>
-                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
-                                        </div>
-                                    </h4>
-                                    {%- if site.show_excerpts -%}
-                                        {{ post.excerpt }}
-                                    {%- endif -%}
-                                </li>
-                                <li>
-                                    <h4 style="margin: 0px;">
-                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
-                                            {{ post.title | escape }}
-                                        </a>
-                                        <div style="display: flex; flex-direction:row; margin:auto;">
-                                            <span class="post-meta post-meta-tags">Tags: 
-                                                
-                                                {% for tag in post.tags %}
-                                                {{ tag }} 
-                                                
-                                                {% endfor %}
-                                                
-                                            </span>
-                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
-                                        </div>
-                                    </h4>
-                                    {%- if site.show_excerpts -%}
-                                        {{ post.excerpt }}
-                                    {%- endif -%}
-                                </li>
-                                <li>
-                                    <h4 style="margin: 0px;">
-                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
-                                            {{ post.title | escape }}
-                                        </a>
-                                        <div style="display: flex; flex-direction:row; margin:auto;">
-                                            <span class="post-meta post-meta-tags">Tags: 
-                                                
-                                                {% for tag in post.tags %}
-                                                {{ tag }} 
-                                                
-                                                {% endfor %}
-                                                
-                                            </span>
-                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
-                                        </div>
-                                    </h4>
-                                    {%- if site.show_excerpts -%}
-                                        {{ post.excerpt }}
-                                    {%- endif -%}
-                                </li>
-
-                                
-
-                                
-                            {%- endif -%}
+                            <!--{%- if post.categories contains "update" -%}-->
+                            <!--{%- endif -%}-->
 
                         {%- endfor -%}
                     </ul>
@@ -435,9 +95,13 @@ layout: default
         </div>
             
         <div class="postexcerpt leftverticalbreak">
+            <h2>Featured Post</h2>
+            
+            
             <div class="previewwrapper">
+                <h4>{% assign h = site.posts[0]%} {{ h.title | escape }}</h4>
                 {% assign p = site.posts[0] %}
-                {{ p.content | strip_html | truncatewords:75}}
+                {{ p.content  | truncatewords:300}}
             </div>
         </div>
     </div>
