Added place for a big post list to live

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -17,7 +17,7 @@
         position: fixed;
         left: 0;
         right: 0;
-        bottom: 100px;
+        bottom: 0px;
         z-index: -1;
 
         display: block;
@@ -67,6 +67,13 @@
 
     body {
         font-family: Lato;
+
+        margin:auto;
+    }
+
+    .constrainwidth{
+        max-width: 1920px;
+        margin:auto;
     }
 
     .content {
