--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,144 +19,86 @@ layout: default
     </div>
 </div>
 
-<div class="about linebreak">
-    <h2>About</h2>
-    <div class="linebreak"></div>
-    <div class="aboutwrapper">
-        <p>Hi I’m Kris, I make lots of technical stuff both as a hobby and professionally and I wanted somewhere that I could share the things I’ve worked on.</p> 
-        <br>
-        <p>I have a MSc in Computer Science from the University of Hull and I currently work as a Senior Mixed Reality Engineer at <a href="https://visr-vr.com/"> VISR Dynamics</a> 
-            where I've been able to grow over the past four years as well as being able to work with some great people.</p>
-        <p> My core area of interest is in graphics programming, I love everything about it to the point that I spend most of my weekends trying to implement things that I've either read about or seen in a game during the week. 
-            This is likely what a lot of this blog will cover, however I can get dragged into other research rabbitholes quite easily. <br>
-            I also am really interested in computer vision and photogrammetry. I quite like how they're almost the inverse of a lot of graphics programming stuff in that you usually are taking a 2D image and translating it back into 3D.  
-        </p>
-
-        <br>
-        <p>Outside of programming I also love Hull City AFC. I quite enjoy obsessing over the 
-            data side of things and trying to figure out what we need to get promoted. I also enjoy playing it as a sport, I find it quite useful for clearing out my brain.</p>
+<div class="about linebreak ">
+    <div class = "constrainwidth">
+        <h2>About</h2>
+        <div class="linebreak"></div>
+        <div class="aboutwrapper">
+            <p>Hi I’m Kris, I make lots of technical stuff both as a hobby and professionally and I wanted somewhere that I could share the things I’ve worked on.</p> 
+            <br>
+            <p>I have a MSc in Computer Science from the University of Hull and I currently work as a Senior Mixed Reality Engineer at <a href="https://visr-vr.com/"> VISR Dynamics</a> 
+                where I've been able to grow over the past four years as well as being able to work with some great people.</p>
+            <p> My core area of interest is in graphics programming, I love everything about it to the point that I spend most of my weekends trying to implement things that I've either read about or seen in a game during the week. 
+                This is likely what a lot of this blog will cover, however I can get dragged into other research rabbitholes quite easily. <br>
+                I also am really interested in computer vision and photogrammetry. I quite like how they're almost the inverse of a lot of graphics programming stuff in that you usually are taking a 2D image and translating it back into 3D.  
+            </p>
+    
+            <br>
+            <p>Outside of programming I also love Hull City AFC. I quite enjoy obsessing over the 
+                data side of things and trying to figure out what we need to get promoted. I also enjoy playing it as a sport, I find it quite useful for clearing out my brain.</p>
+        </div>
     </div>
 </div>
 
 {% assign posts = site.posts %}
 {%- if posts.size > 0 -%}
 <div class="blogwrapper linebreak">
-    <h2 style="text-align: center">Blog</h2>
-    <div class="linebreak"></div>
+    <div class = "constrainwidth">
+        <h2 style="text-align: center">Blog</h2>
+        <div class="linebreak"></div>
+        
+        <div class="blog">
+            <div class="latestposts leftverticalbreak rightverticalbreak">
     
-    <div class="blog">
-        <div class="latestposts rightverticalbreak">
-
-                <h2>Recent Posts</h2>
-
-                    <ul class="post-list">
-                        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-                        {%- for post in posts -%}
-                                <li>
-                                    <h4 style="margin: 0px;">
-                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
-                                            {{ post.title | escape }}
-                                        </a>
-                                        <div style="display: flex; flex-direction:row; margin:auto;">
-                                            <span class="post-meta post-meta-tags">Tags: 
-                                                
-                                                {% for tag in post.tags %}
-                                                {{ tag }} 
-                                                
-                                                {% endfor %}
-                                                
-                                            </span>
-                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
-                                        </div>
-                                    </h4>
-                                    {%- if site.show_excerpts -%}
-                                        {{ post.excerpt }}
-                                    {%- endif -%}
-                                </li>
-                            <!--{%- if post.categories contains "update" -%}-->
-                            <!--{%- endif -%}-->
-
-                        {%- endfor -%}
-                    </ul>
-
-                    <a href="">More posts</a>
-        </div>
-            
-        <div class="postexcerpt leftverticalbreak">
-            <h2>Featured Post</h2>
-            
-            
-            <div class="previewwrapper">
-                {% assign p = site.posts[0] %}
-                {{ p.content  | truncatewords:300}}
+                    <h2>Recent Posts</h2>
+    
+                        <ul class="post-list">
+                            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                            {%- for post in posts -%}
+                                    <li>
+                                        <h4 style="margin: 0px;">
+                                            <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
+                                                {{ post.title | escape }}
+                                            </a>
+                                            <div style="display: flex; flex-direction:row; margin:auto;">
+                                                <span class="post-meta post-meta-tags">Tags: 
+                                                    
+                                                    {% for tag in post.tags %}
+                                                    {{ tag }} 
+                                                    
+                                                    {% endfor %}
+                                                    
+                                                </span>
+                                                <span class="post-meta post-meta-date">{{ post.date | date: date_format }}</span>
+                                            </div>
+                                        </h4>
+                                        {%- if site.show_excerpts -%}
+                                            {{ post.excerpt }}
+                                        {%- endif -%}
+                                    </li>
+                                <!--{%- if post.categories contains "update" -%}-->
+                                <!--{%- endif -%}-->
+    
+                            {%- endfor -%}
+                        </ul>
+    
+                        <a href="">More posts</a>
+            </div>
+                
+            <div class="postexcerpt leftverticalbreak rightverticalbreak">
+                <h2>Featured Post</h2>
+                
+                
+                <div class="previewwrapper">
+                    {% assign p = site.posts[0] %}
+                    {{ p.content  | truncatewords:150}}
+                    <a href="{{p.url}}"> read more</a>
+                </div>
             </div>
         </div>
+
     </div>
         
     <div class="linebreak"></div>
 {%- endif -%}
 </div>
-<!--
-    Fetching all posts
-     <div class="interesting-stuff d-none">
-            {% assign posts = site.posts %}
-
-            <div class="portfolio content">
-                <h3> University Portfolio </h3>
-
-                <div class="jekyll-auto-populate">
-                    {%- if posts.size > 0 -%}
-                        <ul class="post-list">
-                            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-                            {%- for post in posts limit:3 -%}
-                                {%- if post.categories contains "jekyll" -%}
-                                    <li>
-                                        <span class="post-meta">{{ post.date | date: date_format }}</span>
-                                        <h3>
-                                            <a class="post-link" href="{{ post.url | relative_url }}">
-                                                {{ post.title | escape }}
-                                            </a>
-                                        </h3>
-                                    </li>
-                                {%- endif -%}
-
-                            {%- endfor -%}
-                        </ul>
-
-                    {%- endif -%}
-                </div>
-
-            </div>
-
-            <div class="blog content">
-                <h3> Recent Blog Posts</h3>
-
-                <div class="jekyll-auto-populate">
-                    {%- if posts.size > 0 -%}
-                        <ul class="post-list">
-                            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-                            {%- for post in posts -%}
-                                {%- if post.categories contains "update" -%}
-                                    <li>
-                                        <span class="post-meta">{{ post.date | date: date_format }}</span>
-                                        <h3>
-                                            <a class="post-link" href="{{ post.url | relative_url }}">
-                                                {{ post.title | escape }}
-                                            </a>
-                                        </h3>
-                                        {%- if site.show_excerpts -%}
-                                        {{ post.excerpt }}
-                                        {%- endif -%}
-                                    </li>
-                                {%- endif -%}
-
-                            {%- endfor -%}
-                        </ul>
-
-                        <a href="">More posts</a>
-                    {%- endif -%}
-                </div>
-
-            </div>
-        </div>
--->
