--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,7 +79,7 @@
 <body>
 
     {%- include header.html -%}
-
+    
     <main class="page-content" aria-label="Content">
         <div class="wrapper">
             {% assign posts = site.posts %}
@@ -88,50 +88,50 @@
                 <h2 style="text-align: center">Blog</h2>
                 <div class="linebreak"></div>
 
-                <div class="blog">
-                    <div class="latestposts ">
-
-                        <h2>Posts</h2>
-
-                        <ul class="post-list">
-                            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-                            {%- for post in posts -%}
-                            <li>
-                                <h4 style="margin: 0px;">
-                                    <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
-                                        {{ post.title | escape }}
-                                    </a>
-                                    <div style="display: flex; flex-direction:row; margin:auto;">
-                                        <span class="post-meta post-meta-tags">Tags:
-
-                                            {% for tag in post.tags %}
-                                            {{ tag }}
-
-                                            {% endfor %}
-
-                                        </span>
-                                        <span class="post-meta post-meta-date">{{ post.date | date: date_format
-                                            }}</span>
-                                    </div>
-                                </h4>
-                                {%- if site.show_excerpts -%}
-                                {{ post.excerpt }}
-                                {%- endif -%}
-                            </li>
-                            <!--{%- if post.categories contains "update" -%}-->
-                            <!--{%- endif -%}-->
-
-
-                            
-                            {%- endfor -%}
-                        </ul>
-                    </div>
-
-                    <div class="postexcerpt leftverticalbreak">
-                        <div class="previewwrapper">
-                            {{ content }}
+                <div class="blog constrainwidth">
+                        <div class="latestposts ">
+    
+                            <h2>Posts</h2>
+    
+                            <ul class="post-list">
+                                {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                                {%- for post in posts -%}
+                                <li>
+                                    <h4 style="margin: 0px;">
+                                        <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
+                                            {{ post.title | escape }}
+                                        </a>
+                                        <div style="display: flex; flex-direction:row; margin:auto;">
+                                            <span class="post-meta post-meta-tags">Tags:
+    
+                                                {% for tag in post.tags %}
+                                                {{ tag }}
+    
+                                                {% endfor %}
+    
+                                            </span>
+                                            <span class="post-meta post-meta-date">{{ post.date | date: date_format
+                                                }}</span>
+                                        </div>
+                                    </h4>
+                                    {%- if site.show_excerpts -%}
+                                    {{ post.excerpt }}
+                                    {%- endif -%}
+                                </li>
+                                <!--{%- if post.categories contains "update" -%}-->
+                                <!--{%- endif -%}-->
+    
+    
+                                
+                                {%- endfor -%}
+                            </ul>
                         </div>
-                    </div>
+    
+                        <div class="postexcerpt leftverticalbreak">
+                            <div class="previewwrapper">
+                                {{ content }}
+                            </div>
+                        </div>
                 </div>
 
                 {%- endif -%}
