Added posts markdown and fixed horrible gray background on heading text highlight

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -6,6 +6,12 @@
         border:unset;
     }
 
+    .page-link:hover{
+        background-color: unset;
+        border:unset;
+        text-decoration: underline;
+    }
+
     .page-content {
         overflow: auto;
         position: relative;
