Modified home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: default
             <p>Hi I’m Kris, I make lots of technical stuff both as a hobby and professionally and I wanted somewhere that I could share the things I’ve worked on.</p> 
             <br>
             <p>I have a MSc in Computer Science from the University of Hull and I currently work as a Senior Mixed Reality Engineer at <a href="https://visr-vr.com/"> VISR Dynamics</a> 
-                where I've been able to grow over the past four years as well as being able to work with some great people.</p>
+                where I've been able to grow and learn over the past four years.</p>
             <p> My core area of interest is in graphics programming, I love everything about it to the point that I spend most of my weekends trying to implement things that I've either read about or seen in a game during the week. 
                 This is likely what a lot of this blog will cover, however I can get dragged into other research rabbitholes quite easily. <br>
                 I also am really interested in computer vision and photogrammetry. I quite like how they're almost the inverse of a lot of graphics programming stuff in that you usually are taking a 2D image and translating it back into 3D.  
