Added test model for GLTF stuff

--- a/_includes/modelViewer.html
+++ b/_includes/modelViewer.html
@@ -1,6 +1,6 @@
 <div class="embed-container">
     <iframe
-        src="www.kristiandixon.com/extra/jekyllplugins/GLTFViewer"
+        src="https://kristian-dixon.github.io/Extra/JekyllPlugins/GLTFViewer/"
         width="720"
         height="480"
         frameborder="0"
