Updated gltf post

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,6 +54,10 @@ layout: default
                         <ul class="post-list">
                             {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
                             {%- for post in posts -%}
+                                {%- if post.categories contains "Hidden" -%}
+                                    {% continue %}
+                                {%- endif -%}
+
                                     <li>
                                         <h4 style="margin: 0px;">
                                             <a style="text-align: left;" class="post-link" href="{{ post.url | relative_url }}">
