--- a/_includes/modelViewer.html
+++ b/_includes/modelViewer.html
@@ -2,7 +2,7 @@
     <iframe
         src="https://kristian-dixon.github.io/Extra/JekyllPlugins/GLTFViewer/?modelname={{ include.id }}"
         width="100%"
-        height="800"
+        height="100%"
         frameborder="0"
         allowfullscreen="true">
     </iframe>
