--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -16,7 +16,7 @@ html
 body
 { 
     background: url("../screenshots/MoreBlobs2.gif");
-    background-size: 200%;
+    background-size: 300%;
     
     margin: 0px;
     min-height: 100%;
@@ -82,5 +82,81 @@ body
 
 .embed-container
 {
-    width: 55%;
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    top:0;
 }
+
+
+button {
+    position: relative;
+    font-size: 16px;
+    padding: 0 20px;
+    display: inline-block;
+    border:     none;
+    outline:    none;
+    background:   #FFF;
+    border-radius: 3px;
+    border: 1px solid #1F1F1F;
+    box-shadow: 0 1px 3px 0px rgba(#0F0F0F, .5),
+      inset 0 1px rgba(#FFF, .2); 
+  }
+
+.buttonDark {
+    background: linear-gradient(#737373, #333333);
+    background-size: auto 150%;
+    background-position: 0 100%;
+
+    &:hover {
+        background-position: 0 50%;
+        cursor: pointer;
+    }
+
+    &:active {
+        color: #000;
+        background-position: 0 50%;
+        background: #333333;
+        box-shadow: inset 0 2px 3px rgba(black, .5), 0 1px 1px rgba(white, .1);
+        
+        .icon:before {
+        color: #111;
+        text-shadow: 0 1px rgba(white, .1);
+        }
+    }
+}
+    
+
+
+
+.icon:before {
+    font-style: normal;
+    font-size: 40px;
+    display: block;
+    margin-top: -5px;
+    color: #DDD;
+    text-shadow: 0 1px 1px rgba(black, 1);
+    content: attr(data-char);
+}
+
+.buttonCircle
+{
+    border-radius: 100%;
+    height: 4em;
+    width:  4em;
+    box-shadow: -5px 5px 5px rgba(12, 12, 12, 63%); 
+}
+
+
+
+
+@media (max-width: 1024px){
+    .page-content
+    {
+        right:50%;
+        top:50%;
+        transform: translate(50%,-50%);
+        width:90%;
+        border-radius: 8px;
+    }
+};
