--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -209,8 +209,42 @@ button {
     box-shadow: -5px 5px 5px rgba(12, 12, 12, 63%); 
 }
 
+.navigation-wrapper{
+    position:absolute;
+    bottom:0;
+    width: 100%;
+    height:200px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.329) 50%, rgba(0,0,0,0) 100%);
 
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
 
+    color:#FFFFFFDD;
+    text-shadow: 0 1px 1px rgba(0,0,0, 1); 
+    
+}
+
+.post-title{
+    font-weight: 700;
+    font-size: 2rem;
+    margin: 0 0 0 0;
+}
+
+.post-subtitle{
+    font-size: 1.1rem;
+    margin: 0 0 0 0;
+}
+
+.navigation-button{
+    color:#FFFFFFaa;
+    text-decoration: none;
+
+    &:hover {
+        color:#FFFFFFFF;
+    }
+}
 
 @media (max-width: 1024px){
     ::-webkit-scrollbar {
